[WIP] init framework